--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.dark-theme .bg-white, .dark-theme, .dark-theme form, .dark-theme .searchBar{background-color: #000;color: #fff;}
+.dark-theme p, .dark-theme h2, .dark-theme label{color: #fff;}
